# meta-fsm

./: .clang-tidy  CMakeLists.txt  README.md
include/metafsm/: enum.hpp  fsm.hpp
samples/: CMakeLists.txt
samples/actions/: CMakeLists.txt  action-fsm-bench.cpp  action-fsm-log.cpp  action-fsm.hpp  action-sw-bench.cpp  action-sw-log.cpp  action-sw.hpp  events.hpp  states.hpp
samples/simple/: CMakeLists.txt  events.hpp  simple-fsm-bench.cpp  simple-fsm-log.cpp  simple-fsm.hpp  simple-sw-bench.cpp  simple-sw-log.cpp  simple-sw.hpp  states.hpp
samples/tcp-fsm/: CMakeLists.txt  protocol_status.hpp  segment.hpp  tcp-fsm.cpp  tcp-fsm.hpp  tcp-original.cpp  tcp-sw.cpp  tcp_event.hpp  tcp_state.hpp
utest/: CMakeLists.txt  enum.cpp  machine.cpp  state.cpp  transition.cpp
